@@ -14,6 +14,8 @@ Version 6.2 - not yet released
   - dry mass is seperated from the polar reference mass
 * user interface
   - added support for reverse portrait/landscape screen orientations
+* map
+  - redraw terrain only if needed
 
 Version 6.1.3 - not yet released
 * calculations
